--- a/portfolio.html
+++ b/portfolio.html
@@ -26,27 +26,27 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/corgi1.jpg" alt="Word Guess" width="150px" height="150px">
+        <img src="assets/images/corgi1.jpg" alt="Corgi_1" width="150px" height="150px">
         
         <h3>Corgi_1</h3>
       </div>
       <div class="work">
-        <img src="assets/images/corgi2.jpg" alt="RPG Game" width="150px" height="150px">
+        <img src="assets/images/corgi2.jpg" alt="Corgi_2" width="150px" height="150px">
 
         <h3>Corgi_2</h3>
       </div>
       <div class="work">
-        <img src="assets/images/corgi3.jpg" alt="Trivia Game" width="150px" height="150px">
+        <img src="assets/images/corgi3.jpg" alt="Corgi_3" width="150px" height="150px">
 
         <h3>Corgi_3</h3>
       </div>
       <div class="work">
-        <img src="assets/images/corgi4.jpeg" alt="Rutgers Info Widget" width="150px" height="150px">
+        <img src="assets/images/corgi4.jpeg" alt="Corgi_4" width="150px" height="150px">
 
         <h3>Corgi_4</h3>
       </div>
       <div class="work">
-        <img src="assets/images/corgi5.jpg" alt="Rock Paper Scissors" width="150px" height="150px">
+        <img src="assets/images/corgi5.jpg" alt="Corgi_5" width="150px" height="150px">
 
         <h3>Corgi_5</h3>
       </div>
